--- a/src/main/resources/META-INF/resources/templates/navigations/NoMenuTop.vm
+++ b/src/main/resources/META-INF/resources/templates/navigations/NoMenuTop.vm
@@ -24,7 +24,16 @@ $page.setBgColor($ui.bgcolor)
             </script>
         #else
             #set($username = $user.getUsername())
-            #if($username != "" && $username != "guest")
+            <!-- OPENID BEGIN -->
+            #set($name = $!user.getFirstname() + " " + $!user.getLastname())
+            #if($username != "" && $username != "guest" && $name != " ")
+                ## use default timout value from web.xml as the starting text in the "timeLeft" element
+                <span id="user_info">Logged in as: &nbsp;<a href="$link.setPage("XDATScreen_UpdateUser.vm")">$!name</a> <b>|</b> <a href="$link.setAction("LogoutUser")">Logout</a></span>
+                <script>
+                    window.loggedIn = true;
+                </script>
+            #else
+            <!-- OPENID END -->
                 ## use default timout value from web.xml as the starting text in the "timeLeft" element
                 <span id="user_info">Logged in as: &nbsp;<a href="$link.setPage("XDATScreen_UpdateUser.vm")">$!username</a> <b>|</b> <a href="$link.setAction("LogoutUser")">Logout</a></span>
                 <script>
