--- a/src/main/resources/META-INF/resources/templates/navigations/NoninteractiveTop.vm
+++ b/src/main/resources/META-INF/resources/templates/navigations/NoninteractiveTop.vm
@@ -19,18 +19,26 @@ $page.setBgColor($ui.bgcolor)
                 <span id="user_info">Logged in as: <span style="color:red;">Guest</span>
             #else
                 #set($username = $user.getUsername())
+                <!-- OPENID BEGIN -->
                 #set($name = $!user.getFirstname() + " " + $!user.getLastname())
                 #if($username != "" && $username != "guest" && $name != " ")
-                ## use default timout value from web.xml as the starting text in the "timeLeft" element
-                <span id="user_info">Logged in as: &nbsp;<i>$!name</i> <b>|</b> <a href="$link.setAction("LogoutUser")">Logout</a></span>
-                <script>
-                    window.loggedIn = true;
-                </script>
-                #else
                     ## use default timout value from web.xml as the starting text in the "timeLeft" element
-                    <span id="user_info">Logged in as: &nbsp;<i>$!username</i> <b>|</b> <a href="$link.setAction("LogoutUser")">Logout</a></span>
+                    #if(!$hideUserInfo)
+                        <span id="user_info">Logged in as: &nbsp;<i>$!name</i> <b>|</b> <a href="$link.setAction("LogoutUser")">Logout</a></span>
+                    #end
                     <script>
                         window.loggedIn = true;
+                        window.isGuest = realValue('$!user.isGuest()');
+                    </script>
+                #else
+                <!-- OPENID END -->
+                    ## use default timout value from web.xml as the starting text in the "timeLeft" element
+                    #if(!$hideUserInfo)
+                        <span id="user_info">Logged in as: &nbsp;<i>$!username</i> <b>|</b> <a href="$link.setAction("LogoutUser")">Logout</a></span>
+                    #end
+                    <script>
+                        window.loggedIn = true;
+                        window.isGuest = realValue('$!user.isGuest()');
                     </script>
                 #end
             #end
@@ -42,7 +50,7 @@ $page.setBgColor($ui.bgcolor)
 <div id="page_wrapper">
 
 <div id="header" class="main_header"><div class="pad">
-#if ($expired || $forgot)
+#if ($expired || $forgot || $disabled)
         #parse("/screens/Logo.vm")
 #else
     <a id="header_logo" href="$link.setPage("Index.vm")#if($data.getParameters().getString('par'))/par/$data.getParameters().getString('par')#end">
